<resources>
    <string name="app_name">Registration Form</string>
    <string name="Registration_Form">Register Form</string>
    <string name="Welcome">Welcome to Adventure Learning Club!</string>
    <string name="Full_Name">Full Name: </string>
    <string name="Gender">Gender: </string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="StudentID">Student ID: </string>
    <string name="School">School: </string>
    <string name="Email">Email: </string>
    <string name="Phone">Phone: </string>
    <string name="Register">REGISTER</string>
</resources>